doc: more descriptive endoint names in OpenAPI docs
